# agent-shared-library

./: .gitignore  CLAUDE.md  LESSONS.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: architecture.md  config.md  migration.md  risks.md  testing.md
src/agent_shared/: __init__.py  models.py
src/agent_shared/infra/: __init__.py  config_loader.py  db.py  logging_setup.py
src/agent_shared/llm/: __init__.py  client.py  prompt_loader.py
src/agent_shared/trello/: __init__.py  client.py  models.py
tests/: __init__.py  test_config_loader.py  test_db.py  test_integration.py  test_llm_client.py  test_logging_setup.py  test_models.py  test_prompt_loader.py  test_trello_client.py  test_trello_models.py
tests/fixtures/: sample_env.json  test_prompt.md
tests/fixtures/llm_responses/: ollama_generate_json_response.json  ollama_generate_response.json
tests/fixtures/trello_responses/: board_labels_response.json  board_lists_response.json  card_actions_response.json  card_create_response.json  card_get_response.json  list_cards_response.json
